syntax = "proto3";
package rpc_unary;

option go_package = "./db";

message Greeting {
  string first_name = 1;
  string last_name = 2;
}

message GreetRequest {
  Greeting greeting = 1;
}

message GreetResponse {
  string result = 1;
}

service GreetService {
  // unary api
  // Greet 是input
  // return GreetResponse 是output
  rpc Greet(GreetRequest) returns (GreetResponse) {}
}
